crates/rome_js_formatter/tests/specs/prettier/typescript/instantiation-expression/new.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
// new
new A<T>;
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,2 +1,2 @@
 // new
-new A<T>();
+new A<T>;
```

# Output

```js
// new
new A<T>;
```


# Errors
```
error[SyntaxError]: expected an expression but instead found ';'
  ┌─ new.ts:2:9
  │
2 │ new A<T>;
  │         ^ Expected an expression here


```


